--- a/cv.css
+++ b/cv.css
@@ -1,5 +1,4 @@
 body{
-    background-color: hsl(258, 54%, 40%); }
+    background-color: hsl(258, 76%, 20%); }
     body{
-        color: hsl(78, 54%, 40%);
-    }
+        body{ color: hsl(168, 76%, 20%); }
