--- a/cv.css
+++ b/cv.css
@@ -1,4 +1,4 @@
 body{
     background-color: hsl(258, 76%, 20%); }
-    body{
-        body{ color: hsl(168, 76%, 20%); }
+body{ 
+    color: hsl(168, 76%, 20%); }
