--- a/cv.css
+++ b/cv.css
@@ -13,7 +13,7 @@ p{ text-indent: 50px;}
 
 
 #selfie {
-    border-radius: 1em;
+    border-radius: 2rem;
 }
 body { 
     background-color: hsl(240, 13%, 3%)}
