--- a/cv.css
+++ b/cv.css
@@ -14,6 +14,7 @@ p{ text-indent: 50px;}
 
 #selfie {
     border-radius: 2rem;
+    border: 1px;
 }
 body { 
     background-color: hsl(240, 13%, 3%)}
