--- a/cv.css
+++ b/cv.css
@@ -15,6 +15,7 @@ p{ text-indent: 50px;}
 #self {
     border-radius: 30%;
     border: 1px;
+    width: auto;
 }
 body { 
     background-color: hsl(240, 13%, 3%)}
