--- a/cv.css
+++ b/cv.css
@@ -21,4 +21,4 @@ p{ text-indent: 50px;}
 body { 
     background-color: hsl(240, 13%, 3%)}
 
-    section {border: 1em hsla(199, 69%, 23%, 0.6);}
+    section {border: 10px, hsla(199, 69%, 23%, 0.6);}
