--- a/cv.css
+++ b/cv.css
@@ -14,11 +14,12 @@ p{ text-indent: 50px;}
 
 #self {
     border-radius: 30%;
-    border: 5px;
+    border: 20px;
     border-color: hsl(160, 67%, 13%);
     image-orientation: 0 auto;
 }
 body { 
     background-color: hsl(240, 13%, 3%)}
 
-    section {border: 10px, hsla(199, 69%, 23%, 0.6);}
+    section {
+        border: 10px hsla(199, 69%, 23%, 0.6);}
