--- a/cv.css
+++ b/cv.css
@@ -14,13 +14,14 @@ p{ text-indent: 50px;}
 
 #self {
     border-radius: 30%;
-    boarder-style: inset
+    boarder-style: inset;
     border-width: 20px;
     border-color: hsl(160, 67%, 13%);
-    image-orientation: 0 auto;
+  
 }
 body { 
     background-color: hsl(240, 13%, 3%)}
 
     section {
-        border: solid 10px hsla(199, 69%, 23%, 0.6);}
+        border: solid 10px hsla(199, 69%, 23%, 0.6);
+    }
