--- a/cv.css
+++ b/cv.css
@@ -14,7 +14,7 @@ p{ text-indent: 50px;}
 
 #self {
     border-radius: 30%;
-    boarder-style: inset;
+    border-style: inset;
     border-width: 20px;
     border-color: hsl(160, 67%, 13%);
   
