--- a/cv.css
+++ b/cv.css
@@ -26,3 +26,7 @@ body {
         border: solid 10px hsla(199, 69%, 23%, 0.6);
         padding: 5rem;
     }
+
+    h3 {
+        text-size-adjust: 2rem;
+    }
