--- a/cv.css
+++ b/cv.css
@@ -18,7 +18,7 @@ p{ text-indent: 50px;}
     border-style: inset;
     border-width: 5px;
     border-color: hsl(160, 67%, 13%);
-    align-items: center;
+    margin: 0 auto;
   
 }
 body { 
