--- a/cv.css
+++ b/cv.css
@@ -38,6 +38,8 @@ body {
 
    button {
     border-radius: 40%;
+    transform: perspective(20%);
+    transition: color 2s;
    }
    button:hover {
     color: hsl(0, 75%, 14%);
