--- a/cv.css
+++ b/cv.css
@@ -42,5 +42,6 @@ body {
     transition: color 2s;
    }
    button:hover {
-    color: hsl(0, 75%, 14%);
+    color: hsl(0, 2%, 24%);
+    background-color: rgb(61, 9, 9);
    }
