--- a/cv.css
+++ b/cv.css
@@ -39,7 +39,7 @@ body {
    button {
     border-radius: 40%;
     transform: perspective(20%);
-    transition: color 2s;
+    transition: radius, color 2s;
    }
    button:hover {
     color: hsl(0, 2%, 24%);
