--- a/cv.css
+++ b/cv.css
@@ -20,7 +20,12 @@ p{ text-indent: 50px;}
     border-width: 5px;
     border-color: hsl(160, 67%, 13%);
     margin: 0 auto;
+    transition: all 2s;
   
+}
+
+#self:hover {
+    border-radius: 0%;
 }
 body { 
     background-color: hsl(240, 13%, 3%)}
